--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -4,7 +4,7 @@
         class="fecha flex-none bg-[#EEF5DF] px-6 py-2 mr-10 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex-none items-center">
         <p class="font-semibold grid justify-items-center w-6 ">{{ getFirstLetterOfDay(cita.fecha) }}</p>
         <!-- {{ cita.fecha | date: 'dd' }} -->
-        <p class="text-[20px] mt-1 w-6 ">{{ cita.fecha | date: 'dd' }}</p>
+        <p class="text-[20px] mt-1 grid justify-items-center">{{ cita.fecha | date: 'dd' }}</p>
     </div>
     <div *ngIf="!isCitasPage" class="flex flex-auto justify-between">
         <div>
