Active en el left-nav

--- a/src/app/vistas/doctores/doctores.component.html
+++ b/src/app/vistas/doctores/doctores.component.html
@@ -1,6 +1,6 @@
 <div class="grid grid-cols-[15%_1fr] h-screen">
     <div>
-      <app-left-nav></app-left-nav>
+      <app-left-nav [panel]="true"></app-left-nav>
     </div>
     <div class="p-4 flex flex-col">
       <app-secundary-nav></app-secundary-nav>
