--- a/src/app/vistas/index-after-login/index-after-login.component.html
+++ b/src/app/vistas/index-after-login/index-after-login.component.html
@@ -1,5 +1,5 @@
 <div class="body-after-login">
-    <app-left-nav></app-left-nav>
+    <app-left-nav [panel]="true"></app-left-nav>
     <app-secundary-nav></app-secundary-nav>
 
     <div class="contenido px-[3%] mb-6">
