--- a/src/app/vistas/profile/profile.component.html
+++ b/src/app/vistas/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="body-profile">
     
-    <app-left-nav></app-left-nav>
+    <app-left-nav [perfil]="true"></app-left-nav>
     <app-secundary-nav></app-secundary-nav>
     <div class="contenido mx-[5%]">
         <app-perfil-nav></app-perfil-nav>
