--- a/src/app/navs/secundary-nav/secundary-nav.component.html
+++ b/src/app/navs/secundary-nav/secundary-nav.component.html
@@ -1,5 +1,5 @@
 <nav class="flex items-center justify-between pt-6 pb-6">
-  <app-user-welcome-nav/>
+  <app-user-welcome-nav [titulo]="titulo" />
   @if (withFindNav) {
     <div class="find-nav flex-1 flex justify-center">
       <app-find-nav class="w-2/3"></app-find-nav>
