--- a/src/app/navs/secundary-nav/user-welcome-nav/user-welcome-nav.component.html
+++ b/src/app/navs/secundary-nav/user-welcome-nav/user-welcome-nav.component.html
@@ -1,4 +1,4 @@
 <div class="ml-4 text-lg">
   <p class="text-gray-500 font-medium">Hola, {{ nombreApellido }}</p>
-  <p class="font-extrabold text-2xl">Citas</p>
+  <p class="font-extrabold text-2xl">{{ titulo }}</p>
 </div>
