--- a/src/app/vistas/profile/profile.component.html
+++ b/src/app/vistas/profile/profile.component.html
@@ -1,12 +1,12 @@
 <div class="body-profile">
     
-    <app-left-nav></app-left-nav>
-    <app-secundary-nav></app-secundary-nav>
+    <app-left-nav/>
+    <app-secundary-nav [titulo]="'My perfil'"/>
     <div class="contenido mx-[5%]">
-        <app-perfil-nav></app-perfil-nav>
-        <app-info-perfil></app-info-perfil>
-        <app-info-detallada></app-info-detallada>
-        <app-info-general></app-info-general>
+        <app-perfil-nav />
+        <app-info-perfil />
+        <app-info-detallada/>
+        <app-info-general/>
     </div>
 
 </div>
