--- a/src/app/vistas/vistas-citas/vistas-citas.component.html
+++ b/src/app/vistas/vistas-citas/vistas-citas.component.html
@@ -3,7 +3,7 @@
       <app-left-nav></app-left-nav>
     </div>
     <div class="p-4 flex flex-col">
-      <app-secundary-nav></app-secundary-nav>
+      <app-secundary-nav [titulo]="'Citas'"></app-secundary-nav>
       <app-nav-citas></app-nav-citas>
       <app-lista-citas></app-lista-citas>
     </div>
