--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -15,7 +15,7 @@
   </div>
   <div class="flex items-center mr-6">
     <div class="h-10 w-10 rounded-full overflow-hidden cursor-pointer">
-      <img src="img/usuarios/{{ usuario.fotoPerfil }}" alt="Foto de perfil de {{ usuario.nombre }}" class="h-full w-full object-cover">
+      <img [routerLink]="'/perfil'" src="img/usuarios/{{ usuario.fotoPerfil }}" alt="Foto de perfil de {{ usuario.nombre }}" class="h-full w-full object-cover">
     </div>
     <span class="font-bold ml-3 text-lg">{{ usuario.nombre }}</span>
   </div>
