Poner nombre y calcular edad de perfil general

--- a/src/app/sections/info-detallada/info-detallada.component.html
+++ b/src/app/sections/info-detallada/info-detallada.component.html
@@ -15,32 +15,32 @@
     <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 mt-6">
       <div>
         <div class="text-xs font-medium text-gray-400 uppercase">Nombre</div>
-        <div class="mt-2 text-sm font-medium text-gray-500">Pepe dux</div>
+        <div class="mt-2 text-sm font-medium text-gray-500">{{usuario.nombre}}</div>
       </div>
   
       <div>
         <div class="text-xs font-medium text-gray-400 uppercase">Fecha de Nacimiento</div>
-        <div class="mt-2 text-sm font-medium text-gray-500">07/01/1997</div>
+        <div class="mt-2 text-sm font-medium text-gray-500">{{usuario.fechaNacimiento}}</div>
       </div>
   
       <div>
         <div class="text-xs font-medium text-gray-400 uppercase">Edad</div>
-        <div class="mt-2 text-sm font-medium text-gray-500">28</div>
+        <div class="mt-2 text-sm font-medium text-gray-500">{{calcularEdad(usuario.fechaNacimiento)}}</div>
       </div>
   
       <div>
         <div class="text-xs font-medium text-gray-400 uppercase">Número de Teléfono</div>
-        <div class="mt-2 text-sm font-medium text-gray-500">12387428345</div>
+        <div class="mt-2 text-sm font-medium text-gray-500">{{usuario.telefono}}</div>
       </div>
   
       <div>
         <div class="text-xs font-medium text-gray-400 uppercase">Email</div>
-        <div class="mt-2 text-sm font-medium text-gray-500">email&#64;ejemplo.com</div>
+        <div class="mt-2 text-sm font-medium text-gray-500">{{usuario.email}}</div>
       </div>
   
       <div>
         <div class="text-xs font-medium text-gray-400 uppercase">Sexo</div>
-        <div class="mt-2 text-sm font-medium text-gray-500">Hombre</div>
+        <div class="mt-2 text-sm font-medium text-gray-500">{{usuario.sexo}}</div>
       </div>
     </div>
   </div>
