--- a/src/app/sections/info-perfil/info-perfil.component.html
+++ b/src/app/sections/info-perfil/info-perfil.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center p-4 my-6 border rounded-lg text-gray-500 bg-white">
-        <img [src]="'img/doctores/' + usuario.fotoPerfil" class="w-16 h-16 rounded-full mr-3" alt="Foto de perfil de Pepe dux">
+        <img [src]="'img/usuarios/' + usuario.fotoPerfil" class="w-16 h-16 rounded-full mr-3" alt="Foto de perfil de Pepe dux">
         <div class="text-sm">
             <div
                 class="font-medium leading-none text-gray-900 hover:text-indigo-600 transition duration-500 ease-in-out">
