--- a/src/app/vistas/index-before-login/index-before-login.component.html
+++ b/src/app/vistas/index-before-login/index-before-login.component.html
@@ -7,7 +7,7 @@
     <div class="container-baner relative">
       <app-baner />
       <div class="w-[60%] absolute bottom-[-30px] left-[50%] translate-x-[-50%]">
-        <app-find-nav (doctoresEncontrados)="recibirDoctores($event)" />
+        <app-find-nav (doctoresEncontrados)="recibirDoctoresDeBusqueda($event)" />
       </div>
     </div>
 
@@ -16,23 +16,23 @@
 
     <br>
 
-    @if (isNerbyDoctorsAvailable ) {
-    <h3 class="titulos text-2xl font-semibold my-6">Doctores Cercanos a ti</h3>
-    <div class="cont-info-doctors flex flex-wrap justify-between">
-      <app-nearby-doctors class="w-[32%]" />
-      <app-nearby-doctors class="w-[32%]" />
-      <app-nearby-doctors class="w-[32%]" />
-    </div>
-    } @else if (doctores.length > 0) {
+    @if (isNerbyDoctorsAvailable && doctoresCercanos.length > 0) {
+      <h3 class="titulos text-2xl font-semibold my-6">Doctores Cercanos a ti</h3>
+      <div class="cont-info-doctors flex flex-wrap justify-between">
+        @for (doctor of doctoresCercanos; track $index) {
+          <app-nearby-doctors [doctor]="doctor" class="w-[32%]" />
+        }
+      </div>
+    } @else if (doctoresDeBusqueda.length > 0) {
       <h3 class="titulos text-2xl font-semibold my-6">Resultado de la busqueda</h3>
       <div class="cont-info-doctors flex flex-wrap justify-between">
-      @for (doctor of doctores; track $index) {
+      @for (doctor of doctoresDeBusqueda; track $index) {
         <app-nearby-doctors [doctor]="doctor" class="w-[32%]" />
       }
       </div>
     } @else {
       <h3 class="titulos text-2xl font-semibold my-6">Doctores Cercanos a ti</h3>
-      <app-nearby-doctors-disabled (habilitarNerbyDoctors)="cambiarEstado()" />
+      <app-nearby-doctors-disabled (habilitarNerbyDoctors)="cambiarEstado()" (doctoresCercanos)="recibirDoctoresCercanos($event)" />
     }
 
   </div>
