--- a/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
+++ b/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-white border border-[#e1e1e1] rounded-lg w-full max-w-[450px] h-auto">
+<div class="card bg-white border border-[#e1e1e1] rounded-lg w-full max-w-[450px] h-auto mb-4">
   <div class="card-content flex flex-wrap p-4">
     <div class="top flex w-full border-b border-[#e1e1e1] pb-3 mb-3">
       <div class="cont-img w-[85px] h-[85px]">
@@ -6,7 +6,7 @@
       </div>
       <div class="text flex flex-col justify-center ml-4">
         <h4 class="text-black text-lg font-medium">{{ doctor.nombre }} {{ doctor.apellidos }}</h4>
-        <p class="text-[#666] text-sm my-1">{{ doctor.especialidad.nombre }}</p>
+        <p class="specialization text-[#666] text-sm my-1">{{ doctor.especialidad.nombre }}</p>
       </div>
     </div>
     <div class="location flex items-center text-[#666] text-sm mb-3">
