--- a/src/app/vistas/doctores/doctores.component.html
+++ b/src/app/vistas/doctores/doctores.component.html
@@ -1,10 +1,30 @@
 <div class="grid grid-cols-[15%_1fr] h-screen">
+
     <div>
-      <app-left-nav [panel]="true"></app-left-nav>
+        <app-left-nav [panel]="true"></app-left-nav>
     </div>
+
     <div class="p-4 flex flex-col">
-      <app-secundary-nav></app-secundary-nav>
+      @if (usuarioLogeado) {
+        <app-secundary-nav></app-secundary-nav>
+      } @else {
+        <div class="flex items-center">
+          <div onclick="window.location.href='/'"
+               class="inline-block w-10 h-10 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#3B9AB8] hover:text-white hover:scale-110">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+              <g fill="none">
+                <path
+                  d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" />
+                <path fill="#000"
+                  d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" />
+              </g>
+            </svg>
+          </div>
+          <h2 class="text-4xl text-center m-8">Doctores disponibles</h2>
+        </div>
+
+      }
+
       <app-lista-doctores></app-lista-doctores>
     </div>
   </div>
-  
