--- a/src/app/vistas/patient-booking/patient-booking.component.html
+++ b/src/app/vistas/patient-booking/patient-booking.component.html
@@ -78,12 +78,19 @@
         } @else {
         <ingresar-detalles-cita [fecha]="selectedDateTime!" />
         }
+        @if (isFaltanDatos) {
+          <p class="text-red-600 bg-red-100 border border-red-400 px-4 py-2 rounded-md">
+               Por favor selecciona una fecha antes de continuar.
+          </p>
+      }
 
         @if (!isStep2) {
         <div class="flex justify-end mt-2">
           <button (click)="step2()" class="bg-[#3B9AB8] text-white px-12 py-3 rounded">Siguiente</button>
         </div>
         }
+
+
 
       </div>
     </div>
