--- a/src/app/sections/baner/baner.component.html
+++ b/src/app/sections/baner/baner.component.html
@@ -3,18 +3,21 @@
         <h2 class="text-4xl font-bold leading-tight mb-4">¡Pide ahora tu cita!</h2>
         <p class="text-lg mb-5">Contamos con los mejores especialistas listos para atenderte.</p>
         <div class="online-doctors flex items-center">
-            <div class="img-group flex items-center gap-2 relative">
-                <div class="doc-1 w-12 h-12 rounded-full overflow-hidden relative shadow-md z-30">
-                    <img src="img/Doctor_group_1.png" alt="doctor-1" class="w-full h-full object-cover">
-                </div>
-                <div class="doc-2 w-12 h-12 rounded-full overflow-hidden relative shadow-md -ml-5 z-20">
-                    <img src="img/Doctor_group_2.png" alt="doctor-2" class="w-full h-full object-cover">
-                </div>
-                <div class="doc-3 w-12 h-12 rounded-full overflow-hidden relative shadow-md -ml-5 z-10">
-                    <img src="img/Doctor_group_3.png" alt="doctor-3" class="w-full h-full object-cover">
-                </div>
-                <div class="text text-lg ml-2">+200 doctores registrados</div>
+          <div class="img-group flex items-center gap-2 relative">
+            <div class="doc-1 w-12 h-12 rounded-full overflow-hidden relative shadow-md z-30 border-[2.5px] border-white">
+              <img src="img/doctores/doc_m_25.png" alt="doctor-1" class="w-full h-full object-cover">
             </div>
+            <div class="doc-2 w-12 h-12 rounded-full overflow-hidden relative shadow-md -ml-5 z-20 border-[2.5px] border-white">
+              <img src="img/doctores/doc_f_09.png" alt="doctor-2" class="w-full h-full object-cover">
+            </div>
+            <div class="doc-3 w-12 h-12 rounded-full overflow-hidden relative shadow-md -ml-5 z-10 border-[2.5px] border-white">
+              <img src="img/doctores/doc_m_14.png" alt="doctor-3" class="w-full h-full object-cover">
+            </div>
+            <div class="text text-lg ml-2">+200 doctores registrados</div>
+          </div>
+
+
+
         </div>
     </div>
     <div class="left flex-1 flex justify-end">
