Citas canceladas de Vistas-citas

--- a/src/app/navs/citas-nav/citas-nav.component.html
+++ b/src/app/navs/citas-nav/citas-nav.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-row justify-between gap-4 p-2">
     <div class="flex flex-row gap-4 bg-[#f8f8f8]  items-center  rounded-md p-2">
-        <div class="hover:bg-[#ffffff] rounded-md p-1 text-[#7a7d84] hover:text-[#000000]">Próxima</div>
-        <div class="hover:bg-[#ffffff] rounded-md p-1 text-[#7a7d84] hover:text-[#000000]">Pasadas</div>
-        <div class="hover:bg-[#ffffff] rounded-md p-1 text-[#7a7d84] hover:text-[#000000]">Canceladas</div>
+        <button (click)="listaCitasProximas()" class="hover:bg-[#ffffff] rounded-md p-1 text-[#7a7d84] hover:text-[#000000]">Próxima</button>
+        <button (click)="listaCitasPasadas()" class="hover:bg-[#ffffff] rounded-md p-1 text-[#7a7d84] hover:text-[#000000]">Pasadas</button>
+        <button (click)="listaCitasCanceladas()" class="hover:bg-[#ffffff] rounded-md p-1 text-[#7a7d84] hover:text-[#000000]">Canceladas</button>
     </div>
     <div class="flex justify-between items-center mb-6">
         <div class="flex space-x-4">
