--- a/src/app/vistas/vistas-citas/vistas-citas.component.html
+++ b/src/app/vistas/vistas-citas/vistas-citas.component.html
@@ -1,10 +1,10 @@
 <div class="grid grid-cols-[15%_1fr] h-screen">
-    <div>
-      <app-left-nav [citas]="true"></app-left-nav>
-    </div>
-    <div class="p-4 flex flex-col">
-      <app-secundary-nav [titulo]="'Citas'"></app-secundary-nav>
-      <app-nav-citas></app-nav-citas>
-      <app-lista-citas></app-lista-citas>
-    </div>
+  <div>
+    <app-left-nav [citas]="true"></app-left-nav>
   </div>
+  <div class="p-4 flex flex-col">
+    <app-secundary-nav [titulo]="'Citas'"></app-secundary-nav>
+    <app-nav-citas (citasCanceladas)="onCitasCanceladas()"></app-nav-citas>
+    <app-lista-citas></app-lista-citas>
+  </div>
+</div>
