--- a/src/app/sections/historial/cita-historial/cita-historial.component.html
+++ b/src/app/sections/historial/cita-historial/cita-historial.component.html
@@ -1,13 +1,18 @@
 <div class="flex justify-between items-center rounded-lg shadow-md p-4">
     <div class="flex items-center">
+     
       <div >
+        <!-- doctores/ -->
         <img class="w-16 h-16 rounded-full mr-3" src="img/Doctor_info_1.png" alt="Foto de perfil de Pepe dux">
       </div>
+      @for (cita of citas; track $index) {
       <div class="ml-4">
-        <p class="font-semibold text-gray-800">Esther Howard</p>
-        <p class="text-sm text-[#3B9AB8]">8:30 - 9:00</p>
+        <p class="font-semibold text-gray-800">{{cita.doctor.nombre}}</p>
+        <p class="text-sm text-[#3B9AB8]">{{cita.fecha | date: 'HH:mm':'UTC'}} - {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
       </div>
+    }
     </div>
+  
     <div class="receta">
       <a href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#3B9AB8" d="m16.95 20.65l1.15-1.15l-1.6-1.6l-1.15 1.15q-.35.35-.35.8t.35.8t.8.35t.8-.35m2.55-2.55l1.15-1.15q.35-.35.35-.8t-.35-.8t-.8-.35t-.8.35L17.9 16.5zm-1.125 3.975Q17.45 23 16.15 23t-2.225-.925T13 19.85t.925-2.225l3.7-3.7Q18.55 13 19.85 13t2.225.925T23 16.15t-.925 2.225zM5 19V5zm6.125 2H3V3h6.2q.325-.9 1.088-1.45T12 1t1.713.55T14.8 3H21v8.125Q20.5 11 20 11t-1 .075V5H5v14h6.075Q11 19.5 11 20t.125 1M12 4.25q.325 0 .538-.213t.212-.537t-.213-.537T12 2.75t-.537.213t-.213.537t.213.538t.537.212M7 9V7h10v2zm0 4v-2h10v.85q-.2.125-.387.288t-.388.362l-.5.5zm0 4v-2h6.725L12.5 16.225q-.2.2-.362.388T11.85 17z"/></svg>
