--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -21,5 +21,5 @@
   </div>
 </div>
 @if (isModalNotificacionesActive) {
-  <app-panel-notificaciones (modalCerrado)="cerrarModal($event)" />
+  <app-panel-notificaciones (modalCerrado)="cerrarModal($event)" (notificaciones)="actualizarNotificaciones($event)" />
 }
